upload index file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 
+    <div id="preloader-background">
+        <div id="spinners">
+            <div class="loader" id="loader">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
