upload index file

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <head>
     <title>GDG El Paso - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 
+    <!-- Preloader -->
     <div id="preloader-background">
         <div id="spinners">
             <div class="loader" id="loader">
@@ -18,4 +20,7 @@
     </div>
 
 </body>
+
+
+
 </html>
