upload index file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
 
@@ -18,6 +19,27 @@
             </div>
         </div>
     </div>
+
+    <main id="splash" class="flex">
+
+        <section class="wrapper">
+            <a href="./" rel="GDG El Paso Home">
+                <img src="images/logo.png" class="site-logo">
+            </a>
+            <h1 class="site-headline">Google Developer Group El Paso</h1>
+            <p class="site-typography">We are a group of students and industry professionals share a love for code and developing and we strive to share that passion with others!</p>
+            <ul class="social-icons">
+                <li><a href="//www.facebook.com/gdgelpaso/"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="//github.com/gdg-el-paso/"><i class="fab fa-github"></i></a></li>
+                <li><a href="//www.instagram.com/gdgelpaso"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="//www.meetup.com/GDG-El-Paso/"><i class="fab fa-meetup"></i></a></li>
+            </ul>
+            <div class="copyright-signature">
+                &copy; 2019 GDG El Paso
+            </div>
+        </section>
+        
+    </main>
 
 </body>
 
