--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>GDG El Paso - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/app.css" rel="stylesheet">
+    <link href="https://gdgelpaso.org/css/app.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
