--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <head>
     <title>GDG El Paso - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Cache-Control" content="no-store" />
-    
     <link href="https://gdgelpaso.org/css/app.css" rel="stylesheet">
+    <link href="https://gdgelpaso.org/fonts/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
@@ -25,16 +24,16 @@
     <main id="splash" class="flex">
 
         <section class="wrapper">
-            <a href="./" rel="GDG El Paso Home">
-                <img src="images/logo.png" class="site-logo">
+            <a href="https://gdgelpaso.org" rel="GDG El Paso Home">
+                <img src="https://gdgelpaso.org/images/logo.png" class="site-logo">
             </a>
             <h1 class="site-headline">Google Developer Group El Paso</h1>
             <p class="site-typography">We are a group of students and industry professionals share a love for code and developing and we strive to share that passion with others!</p>
             <ul class="social-icons">
-                <li><a href="//www.facebook.com/gdgelpaso/"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="//github.com/gdg-el-paso/"><i class="fab fa-github"></i></a></li>
-                <li><a href="//www.instagram.com/gdgelpaso"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="//www.meetup.com/GDG-El-Paso/"><i class="fab fa-meetup"></i></a></li>
+                <li><a href="https://www.facebook.com/gdgelpaso/"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="https://github.com/gdg-el-paso/"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.instagram.com/gdgelpaso"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.meetup.com/GDG-El-Paso/"><i class="fab fa-meetup"></i></a></li>
             </ul>
             <div class="copyright-signature">
                 &copy; 2019 GDG El Paso
