--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <title>GDG El Paso - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link href="https://gdgelpaso.org/css/app.css" rel="stylesheet">
     <link href="https://gdgelpaso.org/fonts/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
