--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="https://gdgelpaso.org/images/logo.png" class="site-logo">
             </a>
             <h1 class="site-headline">Google Developer Group El Paso</h1>
-            <p class="site-typography">We are a group of students and industry professionals share a love for code and developing and we strive to share that passion with others!</p>
+            <p class="site-typography">We are a group of students and industry professionals who share a love for coding and developing & we strive to share that passion with others!</p>
             <ul class="social-icons">
                 <li><a href="https://www.facebook.com/gdgelpaso/"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="https://github.com/gdg-el-paso/"><i class="fab fa-github"></i></a></li>
