--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <li><a href="https://www.meetup.com/GDG-El-Paso/"><i class="fab fa-meetup"></i></a></li>
             </ul>
             <div class="copyright-signature">
-                Copyright 2019 GDG El Paso. GDGs are local groups of developers who are specifically interested in Google products and APIs. Each local group is called a GDG chapter. Google Developers supports and recognizes GDG chapters, but does not own or manage them.
+                Copyright 2019 GDG El Paso.
             </div>
         </section>
         
