--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://gdgelpaso.org/fonts/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script>$(function(){setTimeout(function(){$("#preloader-background").fadeOut("slow",function(){$(this).remove()})},3000)});</script>
 </head>
 <body>
 
@@ -44,6 +49,9 @@
         </section>
         
     </main>
+
+
+
 
 </body>
 
